# pokerbots

./: Defs.hs  Evaluation.hs  Main.hs  Plumbing.hs  Pokerbot.hs  README.md  README.md~  TexasHoldemPoker.hs  completerun.sh  pokerbots.cabal  run.sh
