
name:                pokerbots
version:             0.1.0.0
author:              Hotlib
build-type:          Simple
cabal-version:       >=1.10

library
    build-depends:  base, mtl >= 2.2, transformers >= 0.4, lens >= 4.4, split >= 0.2, monad-loops >= 0.4.2, containers >= 0.5
    default-extensions: TemplateHaskell
    exposed-modules: Pokerbot, Evaluation 
    default-language: Haskell2010

Executable exampleplay
    build-depends:  base, mtl >= 2.2, transformers >= 0.4, lens >= 4.4, split >= 0.2, monad-loops >= 0.4.2, containers >= 0.5
    default-extensions: TemplateHaskell
    main-is:        Main.hs
    default-language: Haskell2010

